# motovilovka

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  entry-point.sh  mqtt_listen.py  mqtt_send.py  pyproject.toml  run-listener.sh  run-web.sh  sample.env  wsgi.py
.github/workflows/: python-app.yml
app/: __init__.py  logger.py
app/controllers/: __init__.py  account.py  database.py  mqtt.py
app/forms/: __init__.py  device_edit_form.py  device_name_form.py  forgot_password.py  login.py  password_reset.py  registration.py  sub_device_edit_form.py  user_create_form.py  user_update_form.py
app/models/: __init__.py  account.py  device.py  sub_device.py  user.py  utils.py
app/services/: __init__.py  mqtt.py  user.py
app/static/: test.html
app/templates/: accounts.html  base.html  device_edit.html  devices.html  header.html  index.html  nav.html  sub_device_edit.html  sub_devices.html  users.html
app/views/: __init__.py  accounts.py  api.py  devices.py  login.py  main.py  sub_devices.py  users.py
migrations/versions/: 0888694fdc3b_.py  0e2e23025f8d_.py  22ebfd416348_init.py  3f2acb5ca310_accounts_uid.py  60e97093d46b_.py  7b191afb89e1_sub_device.py  92df111c72c6_device_type.py  a54b43b2f5da_.py  c4b5adb4ae68_device_alias.py  c7a92fdc01cb_.py  e6505b560b81_devide_uid.py
mosquitto/config/: mosquitto.conf
pg-backup/: ReadMe.md  restore.sh
tests/: conftest.py  no_test_account.py  test_api.py  test_auth.py  test_db.py  test_device.py  test_sub_device.py  test_users.py  utils.py
tests/mqtt/: __init__.py  (+1 more)
(+30 files in other folders)
